--- a/movimientos/templates/entradas.html
+++ b/movimientos/templates/entradas.html
@@ -13,87 +13,207 @@
 
 {% load crispy_forms_tags %}
 
+<style>
+    body {
+        font-weight: bold;
+    }
+
+    table {
+        border-collapse: collapse;
+        width: 100%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        /* Agregar una sombra a la tabla */
+
+    }
+
+    tr {
+        padding: 8px;
+        text-align: center;
+        border: 3px solid #7ed957;
+        /* Agregar bordes a las celdas */
+    }
+
+    .centrar {
+        text-align: center;
+    }
+
+    th {
+        color: #0047ab;
+        padding: 8px;
+        text-align: center;
+        border: 3px solid #7ed957;
+        /* Agregar bordes a las celdas */
+        background-color: white;
+    }
+
+    h1 {
+        color: #0047ab;
+        font-size: 36px;
+        /* Tamaño de fuente */
+        text-align: center;
+        /* Alineación del texto */
+        text-transform: uppercase;
+        /* Transformación a mayúsculas */
+        letter-spacing: 2px;
+        /* Espaciado entre letras */
+        font-weight: bold;
+        /* Negrita */
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+        /* Sombra de texto */
+    }
+
+    h3 {
+        color: #0047ab;
+        font-size: 20px;
+        /* Tamaño de fuente */
+        text-align: center;
+        /* Alineación del texto */
+        text-transform: uppercase;
+        /* Transformación a mayúsculas */
+        letter-spacing: 2px;
+        /* Espaciado entre letras */
+        font-weight: bold;
+        /* Negrita */
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+        /* Sombra de texto */
+    }
+
+    h5 {
+        color: #0047ab;
+        font-size: 15px;
+        /* Tamaño de fuente */
+        text-align: center;
+        /* Alineación del texto */
+        text-transform: uppercase;
+        /* Transformación a mayúsculas */
+        letter-spacing: 2px;
+        /* Espaciado entre letras */
+        font-weight: bold;
+        /* Negrita */
+        text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.4);
+        /* Sombra de texto */
+    }
+
+    p {
+        color: #0047ab;
+    }
+
+    .container {
+        position: relative;
+        width: 100%;
+        max-width: 900px;
+        height: auto;
+        border-radius: 20px;
+        padding: 20px;
+        box-sizing: border-box;
+        background: white;
+    }
+
+    .nav-tabs .nav-link.active {
+        background-color: #7ed957;
+        /* Color de fondo del tab activo */
+        color: #0056b3;
+        /* Color de texto del tab activo */
+    }
+
+    .nav-tabs .nav-link:hover {
+        background-color: #e9ecef;
+        /* Color de fondo al pasar el cursor */
+        color: #0056b3;
+        /* Color de texto al pasar el cursor */
+    }
+
+    .card {
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        width: 250px;
+        text-align: center;
+        height: 230px;
+    }
+
+    .card h3 {
+        color: #333;
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .card p {
+        color: green;
+        font-size: 18px;
+        margin: 5px 0;
+    }
+
+    .card .highlight {
+        font-weight: bold;
+        color: #007bff;
+        font-size: 22px;
+    }
+
+    .card:hover {
+        transform: translateY(-20px);
+        box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .label {
+        color: #0047ab;
+    }
+
+    /* Pantallas medianas (tablets, pantallas de 1200px o menos) */
+    @media (max-width: 1200px) {
+        .container {
+            max-width: 1000px;
+            /* Ancho más adecuado para pantallas medianas */
+            padding: 15px;
+            /* Ajuste de padding */
+        }
+    }
+
+    /* Pantallas pequeñas (tablets verticales, smartphones grandes) */
+    @media (max-width: 768px) {
+        .container {
+            max-width: 100%;
+            /* Ancho completo para pantallas pequeñas */
+            padding: 10px;
+            /* Relleno más pequeño */
+        }
+    }
+
+    /* Pantallas muy pequeñas (smartphones pequeños) */
+    @media (max-width: 480px) {
+        .container {
+            padding: 5px;
+            /* Relleno aún menor */
+            border-radius: 10px;
+            /* Bordes menos redondeados para espacio adicional */
+        }
+    }
+
+    textarea {
+        height: 50px;
+        /* Ajusta el tamaño según necesites */
+        resize: vertical;
+        /* Permite redimensionar solo en vertical */
+    }
+
+    .textarea-small {
+        height: 50px;
+        resize: vertical;
+    }
+</style>
+
 <body>
     <h1>
         <FONT color=#1589FF>PROCESAR ENTRADA
     </h1>
     </FONT>
     <div class="row">
-        <div class="table responsive py-2">
-
-            <h2> Salida N° {{listado_entrada.id}} </h2>
-            <h2> Cliente: {{listado_orden.cliente}}</h2>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>
-                            Radios
-                        </th>
-                        <th>
-                            Cobras
-                        </th>
-                        <th>
-                            Handsfree
-                        </th>
-                        <th>
-                            Handsfree Tipo Escolta
-                        </th>
-                        <th>
-                            Cascos
-                        </th>
-                        <th>
-                            Baterias extras
-                        </th>
-                        <th>
-                            Cargadores
-                        </th>
-                        <th>
-                            Repetidoras
-                        </th>
-                        
-                    </tr>
-                </thead>
-                <tbody>
-                    
-                    <tr>
-                        <td>
-                            <!-- {{listado_orden.cantidad_radios}} -->
-                        </td>
-                        <td>
-                            <!-- {{listado_entrada.cobras}}  -->
-                            
-                        </td>
-                        <td>
-                            <!-- {{listado_entrada.handsfree}}  -->
-                            
-                        </td>
-                        <td>
-                            <!-- {{listado_entrada.estaciones}}  -->
-                            
-                        </td>
-                        <td>
-                            <!-- {{listado_entrada.cascos}}  -->
-                            
-                        </td>
-                        <td>
-                            <!-- {{listado_entrada.baterias}}     -->
-                            
-                        </td>
-                        <td>
-                            <!-- {{listado_entrada.cargadores}}  -->
-                            
-                        </td> 
-                        <td>
-                            <!-- {{listado_entrada.repetidoras}}  -->
-                            
-                        </td>
-                        
-
-                    </tr>
-                </tbody>
-
-            </table>
-
+        <div class="centrar">
+            <div class="table responsive py-2">
+                <h2> Salida N° {{listado_entrada.id}} </h2>
+                <h2> Cliente: {{listado_orden.cliente}}</h2>
+            </div>
         </div>
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 10">
@@ -106,70 +226,112 @@
 
     <div class="row" style="text-align: center">
 
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
-            <h5><b>Registrar Radios</h5></b>
-            <form action='/entradaRadios/{{listado_entrada.id}}/{{listado_orden.id}}' method="POST">
-                {% csrf_token %}
-                <h3><font color ="red">{{error}}</h3></font><br>
-                <!-- <input type="text" id="serialRx" name="serialRx" size="30" /> -->
-                {{form}}
-                <button class="btn btn-primary">
-                    GUARDAR
-                </button>
-            </form>
-            <br>
-            <h1> Radios Cargadas: {{cantidad_rx}}</h1>
-            
+
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <div class="container">
+                <div
+                    style="border: 2px solid #7ed957; padding: 15px; border-radius: 8px; max-width: 100%; margin: 0 auto; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
+                    <h5><b>Registrar Radios</h5></b>
+                    <form action='/entradaRadios/{{listado_entrada.id}}/{{listado_orden.id}}' method="POST">
+                        {% csrf_token %}
+                        <h3>
+                            <font color="red">{{error}}
+                        </h3>
+                        </font><br>
+                        <!-- <input type="text" id="serialRx" name="serialRx" size="30" /> -->
+                        {{form}}
+                        <button class="btn btn-primary">
+                            GUARDAR
+                        </button>
+                    </form>
+                    <br>
+
+                    <h1> Radios Cargadas: {{cantidad_rx}}</h1>
+                </div>
+
+                <table class="table table-striped" style="margin-top: 20px; overflow: auto; height: 300px;">
+                    <thead>
+                        <tr>
+                            <th>
+                                <h5><b>Devueltas</h5></b>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for c in listadoRadiosCargadas %}
+                        <tr>
+
+                            <td>
+                                <font color="green"><b>{{c.serial}} </b></font>
+                            </td>
+
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+
+                </table>
+                <!-- <a href='/generarEntrada/{{listado_entrada.id}}' class="btn btn-success">FINALIZAR</a> -->
+            </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
-            <h5><b></h5></b>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>
-                            <h5><b>Devueltas</h5></b>
-                        </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for c in listadoRadiosCargadas %}
-                    <tr>
-                      
-                        <td><font color ="green"><b>{{c.serial}} </b></font></td>
-                        
-                    </tr>
-                    {% endfor %}
-                </tbody>
-                
-            </table>
-            <!-- <a href='/generarEntrada/{{listado_entrada.id}}' class="btn btn-success">FINALIZAR</a> -->
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+        <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
+            <div class="container">
             <h5><b>Registrar Accesorios</h5></b>
-            <h4><font color ="red">{{error1}}</h4></font><br>
+
+            <div
+                    style="border: 2px solid #7ed957; padding: 15px; border-radius: 8px; max-width: 100%; margin: 0 auto; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
+                    <form action='/generarEntrada/{{listado_entrada.id}}/{{listado_orden.id}}' method="POST">
+                        {% csrf_token %}
+                        <div class="row">
+                            {% for field in formEntrada %}
+                                <div class="col-md-3 mb-3">
+                                    {% if field.field.widget.input_type == "textarea" %}
+                                        <div class="form-group">
+                                            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                            <textarea class="form-control textarea-small" id="{{ field.id_for_label }}" name="{{ field.html_name }}" rows="2">{{ field.value|default_if_none:'' }}</textarea>
+                                        </div>
+                                    {% else %}
+                                        {{ field|as_crispy_field }}
+                                    {% endif %}
+                                </div>
+                                {% if forloop.counter|divisibleby:4 %}
+                                    </div><div class="row">
+                                {% endif %}
+                            {% endfor %}
+                        </div>
+                        <button class="btn btn-warning">
+                            CERRAR PEDIDO
+                        </button>
+                    </form>
+                </div>
+            <!-- <h4>
+                <font color="red">{{error1}}
+            </h4>
+            </font><br>
             <form action='/generarEntrada/{{listado_entrada.id}}/{{listado_orden.id}}' method="POST">
-                {% csrf_token %}              
-                <!-- <input type="text" id="serialRx" name="serialRx" size="30" /> -->
+                {% csrf_token %}
+                
                 {{formEntrada|crispy}}
                 <button class="btn btn-warning">
                     CERRAR PEDIDO
                 </button>
-            </form>
+            </form> -->
             <!-- <h5><b>Observaciones:</h5></b>
 
             <textarea id="ObsText" name="ObsText" rows="10" cols="60"></textarea> -->
         </div>
-
     </div>
+    </div>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    
-        <script>
-            document.getElementById("id_serial").focus();
-        </script>
-        
+
+    <script>
+        document.getElementById("id_serial").focus();
+    </script>
+
 </body>
 {% endblock %}
 
