--- a/movimientos/templates/controlrxeventos.html
+++ b/movimientos/templates/controlrxeventos.html
@@ -375,7 +375,112 @@
                         </div>
                     </div>
                 </div>
-                <div
+                <ul class="nav nav-tabs" id="myTab" role="tablist" style="margin-top: 20px;">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4"
+                            type="button" role="tab" aria-controls="tab1" aria-selected="true">ENTREGADAS</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link " id="tab5-tab" data-bs-toggle="tab" data-bs-target="#tab5"
+                            type="button" role="tab" aria-controls="tab2" aria-selected="false">RECOGIDAS</button>
+                    </li>
+                </ul>
+                <div class="tab-content" id="myTabContent">
+                    <div class="tab-pane fade show active" id="tab4" role="tabpanel" aria-labelledby="tab4-tab">
+                        <h4>TOTAL ENTREGADAS: {{total_entregado}}</h4>
+                        <div
+                            style="border: 2px solid #7ed957; padding: 15px; width: 400px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
+                            <div class="row d-flex justify-content-center">
+                                <div class="mb-3">
+                                    <input type="text" id="buscarResponsable" class="form-control"
+                                        placeholder="Buscar por Responsable">
+                                </div>
+                                <div class="mb-3">
+                                    <input type="text" id="buscarserial" class="form-control"
+                                        placeholder="Buscar por Serial">
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="table-responsive py-2 text-center">
+                                        <table class="table table-striped" style="margin: 0 auto;">
+                                            <thead>
+                                                <tr>
+                                                    <th>N°</th>
+                                                    <th>RESPONSABLE</th>
+                                                    <th>SERIAL</th>
+                                                    <th>ESTADO</th>
+                                                    <th>HORA</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="tablaResumen">
+                                                {% for c in tabla_resumen %}
+                                                {% if c.estadorx == "E" %}
+                                                <tr>
+                                                    <td>{{ forloop.counter }}</td>
+                                                    <td>{{ c.responsable }}</td>
+                                                    <td>{{ c.serial }}</td>
+                                                    <td>{{ c.estadorx }}</td>
+                                                    <td>{{c.hora|default:" "}}</td>
+                                                </tr>
+                                                {% endif %}
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="tab-pane fade show active" id="tab5" role="tabpanel" aria-labelledby="tab5-tab">
+                        <h4>TOTAL RECOGIDAS: {{total_recogido}}</h4>
+                        <div
+                            style="border: 2px solid #7ed957; padding: 15px; width: 400px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
+                            <div class="row d-flex justify-content-center">
+                                <div class="mb-3">
+                                    <input type="text" id="buscarResponsabler" class="form-control"
+                                        placeholder="Buscar por Responsable">
+                                </div>
+                                <div class="mb-3">
+                                    <input type="text" id="buscarserialr" class="form-control"
+                                        placeholder="Buscar por Serial">
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="table-responsive py-2 text-center">
+                                        <table class="table table-striped" style="margin: 0 auto;">
+                                            <thead>
+                                                <tr>
+                                                    <th>N°</th>
+                                                    <th>RESPONSABLE</th>
+                                                    <th>SERIAL</th>
+                                                    <th>ESTADO</th>
+                                                    <th>HORA</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="tablaResumen">
+                                                {% for c in tabla_resumen %}
+                                                {% if c.estadorx == "R" %}
+                                                <tr>
+                                                    <td>{{ forloop.counter }}</td>
+                                                    <td>{{ c.responsable }}</td>
+                                                    <td>{{ c.serial }}</td>
+                                                    <td>{{ c.estadorx }}</td>
+                                                    <td>{{c.hora|default:" "}}</td>
+                                                </tr>
+                                                {% endif %}
+                                                {% endfor %}
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                    </div>
+
+                </div>
+                <!-- <div
                     style="border: 2px solid #7ed957; padding: 15px; width: 400px ;border-radius: 8px; max-width: 100%; margin: 0 auto; margin-top: 10px; background-color: #c7e0bb; display: flex; flex-direction: column; align-items: center; text-align: center;">
                     <div class="row d-flex justify-content-center">
                         <div class="mb-3">
@@ -410,7 +515,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
@@ -502,6 +607,60 @@
             });
         });
     </script>
+
+<script>
+    // Función para filtrar la tabla por responsable recogidas
+    document.getElementById('buscarResponsabler').addEventListener('keyup', function () {
+        var input = document.getElementById('buscarResponsabler');
+        var filter = input.value.toLowerCase();
+        var rows = document.querySelectorAll('#tablaResumen tr');
+
+        rows.forEach(function (row) {
+            var responsable = row.cells[1].textContent.toLowerCase(); // Columna "RESPONSABLE" (índice 1)
+            if (responsable.indexOf(filter) > -1) {
+                row.style.display = "";  // Mostrar fila
+            } else {
+                row.style.display = "none";  // Ocultar fila
+            }
+        });
+    });
+</script>
+
+<script>
+    // Función para filtrar la tabla por serial
+    document.getElementById('buscarserial').addEventListener('keyup', function () {
+        var input = document.getElementById('buscarserial');
+        var filter = input.value.toLowerCase();
+        var rows = document.querySelectorAll('#tablaResumen tr');
+
+        rows.forEach(function (row) {
+            var responsable = row.cells[2].textContent.toLowerCase(); // Columna "RESPONSABLE" (índice 1)
+            if (responsable.indexOf(filter) > -1) {
+                row.style.display = "";  // Mostrar fila
+            } else {
+                row.style.display = "none";  // Ocultar fila
+            }
+        });
+    });
+</script>
+
+<script>
+    // Función para filtrar la tabla por serial recogidas
+    document.getElementById('buscarserialr').addEventListener('keyup', function () {
+        var input = document.getElementById('buscarserialr');
+        var filter = input.value.toLowerCase();
+        var rows = document.querySelectorAll('#tablaResumen tr');
+
+        rows.forEach(function (row) {
+            var responsable = row.cells[2].textContent.toLowerCase(); // Columna "RESPONSABLE" (índice 1)
+            if (responsable.indexOf(filter) > -1) {
+                row.style.display = "";  // Mostrar fila
+            } else {
+                row.style.display = "none";  // Ocultar fila
+            }
+        });
+    });
+</script>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
